# opentelemetry-collector-stack

./: Dockerfile  LICENSE  README.md  otel-collector-config.yaml
exampleApp/: app.js  package.json
exampleApp/public/: index.html
exampleApps/node/: README.md  app.js  dice.js  instrumentation.js  package.json
exampleApps/rust/: Cargo.toml  README.md
exampleApps/rust/src/: instrumentation.rs  main.rs
otel-collector/: Dockerfile
